<resources>
    <string name="app_name">ArtFestProject1</string>
    <string name="admin">admin</string>
    <string name="open_camera">Open Camera</string>
    <string name="test">test</string>
    <string name="sendmail">sendmail</string>
    <string name="title">Title</string>
    <string name="what_s_your_problem">What\'s your problem ?</string>
    <string name="send_the_mail">Send the mail</string>
    <string name="to">To 意趣節技術部</string>
    <string name="print">Print</string>
    <string name="todo">TODO</string>
    <string name="compute">Compute</string>
    <string name="usersendprint">userSendPrint</string>
    <string name="finish">finish</string>
    <string name="onemore">onemore</string>
    <string name="explain_activity">Explain Activity</string>
    <string name="go_go_camera">Go Go Camera</string>
    <string name="textview">TextView</string>
    <string name="camera">開始拍攝</string>
    <string name="button">Button</string>
    <string name="肖像權">肖像權</string>
</resources>