<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".SendMailActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="To 藝趣節技術部"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/mail_title"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/title"
        android:autofillHints="" />

    <EditText
        android:id="@+id/mail_content"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/what_s_your_problem"
        android:autofillHints="" />

    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_the_mail"
        />


</LinearLayout>