<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity"
    android:orientation="vertical"
    android:background="@drawable/edit">



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="235dp"
        android:visibility="invisible"
        tools:srcCompat="@tools:sample/avatars"
        android:layout_marginTop="190dp"
        android:layout_marginLeft="82dp"
        android:contentDescription="@string/todo"
       />

    <Button
        android:id="@+id/compute_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:visibility="invisible"
        android:text="compute"

        />
    <Button
        android:id="@+id/show_button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="470dp"
        android:layout_marginLeft="210dp"
        android:background="@android:color/transparent"

        />

    <Button
        android:id="@+id/print_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:visibility="invisible"
        android:text="@string/print"
         />

    <Button
        android:id="@+id/user_send_print_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:visibility="invisible"
        android:text="@string/usersendprint" />

    <Button
        android:id="@+id/finish_print_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:visibility="invisible"
        android:text="@string/finish" />

    <Button
        android:id="@+id/onemore_button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="470dp"
        android:layout_marginLeft="50dp"
        android:background="@android:color/transparent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</RelativeLayout>