<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    android:foregroundTint="#FFFFFF"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/admin_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="182dp"
        android:elevation="2dp"
        android:scaleType="fitCenter"
        android:text="@string/admin"
        app:layout_constraintBottom_toTopOf="@+id/camera_open"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendOpen" />

    <Button
        android:id="@+id/camera_open"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="247dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:elevation="2dp"
        android:foregroundTint="#FFFFFF"
        android:scaleType="fitCenter"
        android:text="@string/open_camera"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_open" />

    <Button
        android:id="@+id/sendOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="118dp"
        android:layout_marginBottom="130dp"
        android:text="@string/sendmail"
        app:layout_constraintBottom_toTopOf="@+id/admin_open"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>